--- a/myungho/HomeNect/app/src/main/res/values/colors.xml
+++ b/myungho/HomeNect/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorGreen">#00a000</color>
+    <color name="colorLightGreen">#008000</color>
+    <color name="colorDarkGray">#606060</color>
+    <color name="colorDarkNavy">#000060</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorLightBlue">#1FBED6</color>
 </resources>
