--- a/myungho/HomeNect/app/src/main/res/layout/activity_main.xml
+++ b/myungho/HomeNect/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:waveview="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,9 +10,22 @@
     tools:context="com.capstone.sejong.homenect.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_height="match_parent"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/rv">
 
     </android.support.v7.widget.RecyclerView>
+<!--    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
+        <com.dnkilic.waveform.WaveView
+            android:id="@+id/waveView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            waveview:deneme="true" />
+    </RelativeLayout>-->
 </RelativeLayout>
