--- a/myungho/HomeNect/app/src/main/res/menu/menu.xml
+++ b/myungho/HomeNect/app/src/main/res/menu/menu.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item
         android:id="@+id/add_thing"
-        android:orderInCategory="1"
+        android:orderInCategory="101"
         android:title="Thing 추가" />
     <item
+    android:id="@+id/add_guest"
+    android:orderInCategory="102"
+    android:title="사용자 추가" />
+    <item
         android:id="@+id/add_user"
-        android:orderInCategory="2"
-        android:title="사용자 추가" />
+        android:orderInCategory="100"
+        android:title="사용자 등록" />
+
 </menu>
