--- a/myungho/HomeNect/app/src/main/res/values/styles.xml
+++ b/myungho/HomeNect/app/src/main/res/values/styles.xml
@@ -17,4 +17,18 @@
         <item name="pressedTranslationZ">12dp</item>
         <item name="rippleColor">@android:color/white</item>
     </style>
+    <style name="AppTheme.CustomTheme" >
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+    <style name="NoTitle1" parent="Theme.AppCompat.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- 스플래시 스크린 액티비티용 테마 -->
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:background">@drawable/layerlist</item>
+    </style>
 </resources>
